# talks

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  build.sh  hami_intro.md  kcd_vietnam.md  pyproject.toml  snow_corp_cncf.md
assets/snow/: snow_kubecon.drawio
themes/: dynamia.css
